flags list modal view issue fixed on mobile view.

--- a/script/css/admin.scss
+++ b/script/css/admin.scss
@@ -7053,7 +7053,7 @@ span.initials.avatar_name {
     line-height: 23px;
     margin: 0;
     display: block;
-    min-width: 220px;
+    min-width: 160px;
     letter-spacing: 0.3px;
     width: 46px;
     height: 23px;
@@ -7066,7 +7066,7 @@ span.initials.avatar_name {
     }
 
     &:empty {
-      display: none !important;
+      display: none !important; 
     }
 
     &.custom-switch {
@@ -7682,7 +7682,7 @@ ul.status-list.dropdown-menu {
 .sb-flow-conditions {
   > div {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr); /* 3 columns by default */
     grid-gap: 15px;
   }
 
@@ -7692,6 +7692,11 @@ ul.status-list.dropdown-menu {
   }
 }
 
+@media (max-width: 575.98px) {
+  .sb-languages-box .sb-main { 
+      grid-template-columns: repeat(1, 1fr) !important; /* 1 columns by default */ 
+  }
+}
 .sb-timetable {
   > div > div {
     display: flex;
